--- a/ToDo app/index.html
+++ b/ToDo app/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div id="root" class="min-h-screen bg-green-100"></div>
+  <div id="root" class="min-h-screen"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
