Completed with favicons and meta tags

--- a/React Flow Logic Gates/index.html
+++ b/React Flow Logic Gates/index.html
@@ -3,9 +3,35 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+
+  <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
+  <link rel="manifest" href="favicons/site.webmanifest">
+  <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+
+  <title>Logic Gate Simulator - By Abhishek Kamyani</title>
+  <meta name="title" content="Logic Gate Simulator - By Abhishek Kamyani">
+  <meta name="description"
+    content="Build and experiment with digital logic circuits using this interactive simulator. Explore AND, OR, NOT, XOR gates and more! Created by Abhishek Kamyani.">
+  <meta name="keywords"
+    content="logic gate simulator, digital logic, circuit design, react flow, electronics, Logic Gate Simulator, React Flow, Logic Circuits, Interactive Simulator, Abhishek Kamyani">
+  <meta name="author" content="Abhishek Kamyani">
+
+  <meta property="og:title" content="Logic Gate Simulator - Build Digital Circuits">
+  <meta property="og:description"
+    content="Build and experiment with digital logic circuits using this interactive simulator. Explore AND, OR, NOT, XOR gates and more! Created by Abhishek Kamyani.">
+  <meta property="og:image" content="https://logic-gate-simulator.vercel.app/images/website">
+  <meta property="og:url" content="https://logic-gate-simulator.vercel.app">
+  <meta property="og:type" content="website">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Logic Gate Simulator - Build Digital Circuits">
+  <meta name="twitter:description"
+    content="Build and experiment with digital logic circuits using this interactive simulator. Explore AND, OR, NOT, XOR gates and more! Created by Abhishek Kamyani.">
+  <meta name="twitter:image" content="https://logic-gate-simulator.vercel.app/images/website">
 </head>
 
 <body>
