--- a/React Flow Logic Gates/index.html
+++ b/React Flow Logic Gates/index.html
@@ -23,7 +23,7 @@
   <meta property="og:title" content="Logic Gate Simulator - Build Digital Circuits">
   <meta property="og:description"
     content="Build and experiment with digital logic circuits using this interactive simulator. Explore AND, OR, NOT, XOR gates and more! Created by Abhishek Kamyani.">
-  <meta property="og:image" content="https://logic-gate-simulator.vercel.app/images/website">
+  <meta property="og:image" content="https://logic-gate-simulator.vercel.app/images/website.png">
   <meta property="og:url" content="https://logic-gate-simulator.vercel.app">
   <meta property="og:type" content="website">
 
@@ -31,7 +31,7 @@
   <meta name="twitter:title" content="Logic Gate Simulator - Build Digital Circuits">
   <meta name="twitter:description"
     content="Build and experiment with digital logic circuits using this interactive simulator. Explore AND, OR, NOT, XOR gates and more! Created by Abhishek Kamyani.">
-  <meta name="twitter:image" content="https://logic-gate-simulator.vercel.app/images/website">
+  <meta name="twitter:image" content="https://logic-gate-simulator.vercel.app/images/website.png">
 </head>
 
 <body>
