Started weather project

--- a/Apache Echarts/index.html
+++ b/Apache Echarts/index.html
@@ -19,8 +19,8 @@
 <!-- <script src="starter/script.js" type="text/javascript"></script>    -->
 <!-- <script src="data/source.js" type="text/javascript"></script>    -->
 <!-- <script src="data/dimensions-source.js" type="text/javascript"></script>    -->
-<!-- <script src="data/seriesLayoutBy.js" type="text/javascript"></script>    -->
-<script src="data/series-encode.js" type="text/javascript"></script>   
+<script src="data/seriesLayoutBy.js" type="text/javascript"></script>   
+<!-- <script src="data/series-encode.js" type="text/javascript"></script>    -->
 
 </body>
 
